# Rusty

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  ok.json
react-playground/: package-lock.json  package.json
react-playground/src/: App.js
react-playground/src/Http/: Client.js
react-playground/src/Rappel/: Rappel.js  RappelsService.js
rust-playground/: Cargo.toml
rust-playground/notification/: .env  Cargo.toml  README.md  init.sql
rust-playground/notification/src/: main.rs
rust-playground/notification/src/application/: errors.rs  mod.rs  route.rs
rust-playground/rustyttp/: Cargo.toml
rust-playground/rustyttp/src/: lib.rs
rust-playground/rustyttp/src/http/: connection_handling.rs  mod.rs
rust-playground/src/application/database/: database_service.rs  rappel_db_service.rs
rust-playground/src/application/rappels/: mod.rs  rappels_controller.rs
rust-playground/src/application/routes/: mod.rs  route.rs
src/: database_service.rs  main.rs  route.rs
src/application/: errors.rs  mod.rs
src/application/database/: mod.rs  rappel_db_service.rs
src/application/http/: connection_handling.rs  mod.rs
src/application/http/errors/: malformed.rs
src/application/http/structs/: http_request.rs  http_response.rs  (+2 more)
src/application/rappels/: mod.rs  rappels.rs  rappels_controller.rs  structures.rs
src/application/routes/: mod.rs  route.rs  route_service.rs  route_service_test.rs
src/application/utils/: connection_handling.rs  mod.rs  route.rs  route_utils.rs  route_utils_test.rs
src/rappels/: mod.rs  rappels.rs
tests/: test.rs
(+24 files in other folders)
