[package]
name = "notification-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
postgres = {version = "0.19.5", features = ["with-chrono-0_4"]}
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
